# dtasm

./: .gitignore  .gitmodules  LICENSE  MAINTAINERS  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
docs/: README.md  dtasm.drawio
dtasm_abi/: Cargo.toml
dtasm_abi/src/: lib.rs
lib/dtasm_abi/: Cargo.toml
lib/dtasm_abi/schema/: dtasm.fbs
lib/dtasm_base_rs/: Cargo.toml
lib/dtasm_base_rs/src/: errors.rs  lib.rs  model_conversion.rs  model_description.rs  types.rs
lib/dtasm_rs/: Cargo.toml
lib/dtasm_rs/src/: interface.rs  lib.rs
module/add_rs/: Cargo.toml  build.rs
module/add_rs/src/: lib.rs  modelDescription.json  types.rs
module/dpend/src/: modelDescription.json
module/dpend_cpp/: CMakeLists.txt  Makefile
module/dpend_cpp/include/: dpend.h  dpend_dtasm.h  model_info.h
module/dpend_cpp/src/: dpend.c  dpend_dtasm.cpp
module/dpend_rs/: Cargo.toml
module/dpend_rs/src/: dpend.rs  dpend_types.rs  lib.rs  types.rs
module/dtasm_rs/: Cargo.toml
module/dtasm_rs/src/: interface.rs  lib.rs
runtime/dtasm3/: CMakeLists.txt  README.md
runtime/dtasm3/include/: dtasm3.h  wasm3_cpp.h  wasm3_mem.h
runtime/dtasm3/src/: dtasm3.cpp
runtime/dtasmtime/: Cargo.toml
runtime/dtasmtime-c-api/: Cargo.toml  build.rs  cbindgen.toml
runtime/dtasmtime-c-api/src/: c_types.rs  lib.rs
runtime/dtasmtime/src/: errors.rs  lib.rs  model_converter.rs  model_description.rs  runtime.rs
runtime/dtasmtime/tests/: add_tests.rs
runtime/dtasmtime/tests/assets/: add_rs.wasm
runtime/examples/dtasm3_main/: CMakeLists.txt
runtime/examples/dtasm3_main/src/: main.cpp
runtime/examples/dtasmtime_c/: CMakeLists.txt  Makefile
runtime/examples/dtasmtime_c/src/: main.c
runtime/examples/dtasmtime_rs/: Cargo.toml
runtime/examples/dtasmtime_rs/src/: main.rs
tools/dp_plot/: README.md  double_pendulum.ipynb  double_pendulum_animation.ipynb  requirements.txt
