[package]
name = "dtasm_abi"
version = "0.1.0"
authors = ["Moritz Allmaras <moritz.allmaras@siemens.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatbuffers = { version = "2.0.0", path = "../../third_party/flatbuffers.git/rust/flatbuffers" }

[lib]
