[package]
name = "dtasm_base"
version = "0.1.0"
authors = ["arrisde <maurice@nurfuerspam.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatbuffers = { version = "0.6.2", path = "../../third_party/flatbuffers.git/rust/flatbuffers" }
thiserror = "1.0"

dtasm_abi = { version = "0.1.0", path = "../dtasm_abi" }