[package]
name = "dtasm_rs"
version = "0.1.0"
authors = ["arrisde <maurice@nurfuerspam.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.98"
once_cell = "1.8.0"
thiserror = "1.0.26"
flatbuffers = { version = "0.6.2", path = "../../third_party/flatbuffers.git/rust/flatbuffers" }
dtasm_abi = { version = "0.1.0", path = "../dtasm_abi" }
dtasm_base = { version = "0.1.0", path = "../dtasm_base_rs" }
