[package]
name = "add_rs"
version = "0.1.0"
authors = ["arrisde <maurice@nurfuerspam.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.8.0"
dtasm_rs = { version = "0.1.0", path = "../../lib/dtasm_rs" }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
