[package]
name = "dpend_rs"
version = "0.1.0"
authors = ["Moritz Allmaras <moritz.allmaras@siemens.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatbuffers = "0.6.1"
lazy_static = "1.4.0"
libc = "0.2"
dtasm_abi = { version = "0.1.0", path = "../../dtasm_abi" }

[lib]
crate-type = ["cdylib"]