[package]
name = "dtasmtime-c-api"
version = "0.1.0"
authors = ["Moritz Allmaras <moritz.allmaras@siemens.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
dtasmtime = { version = "0.1.0", path = "../dtasmtime" }
dtasm_base = { version = "0.1.0", path = "../../lib/dtasm_base_rs" }

[build-dependencies]
cbindgen = "0.17.0"

[lib]
crate-type = ["cdylib"]

