[package]
name = "dtasmtime_rs"
version = "0.1.0"
authors = ["Moritz Allmaras <moritz.allmaras@siemens.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
structopt = "0.3.18"
csv = "1.1.3"

dtasmtime = { version = "0.1.0", path = "../../dtasmtime" }